<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".ui.ProcesoFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Servicios"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="22dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="612dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton1"
            android:layout_width="60dp"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="250dp"
            android:clickable="true"
            android:src="@drawable/barber_store"
            android:visibility="visible"
            app:backgroundTint="#FFA000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="60dp"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="364dp"
            android:layout_marginBottom="178dp"
            android:clickable="true"
            android:src="@drawable/barberscissors"
            android:visibility="visible"
            app:backgroundTint="#FFA000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/floatingActionButton1"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="292dp"
            android:layout_height="32dp"
            android:layout_marginStart="87dp"
            android:layout_marginBottom="288dp"
            android:text="@string/Seleccion_barber"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="291dp"
            android:layout_height="33dp"
            android:layout_marginBottom="188dp"
            android:text="@string/Productos_Barber"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="262dp"
            android:layout_height="119dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user_ac"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/serviceB"
            android:layout_width="298dp"
            android:layout_height="24dp"
            android:background="#9e9e9e"
            android:text="@string/Servicios_Barber"
            android:textAlignment="center"
            android:textColor="#212221"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.425" />

        <TextView
            android:id="@+id/ProductsB"
            android:layout_width="298dp"
            android:layout_height="29dp"
            android:background="#9e9e9e"
            android:text="@string/Productos"
            android:textAlignment="center"
            android:textColor="#212221"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>


