<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">











    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/account"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="612dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="208dp"
            android:layout_height="115dp"
            android:layout_marginBottom="416dp"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.753" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="266dp"
            android:layout_height="148dp"
            android:layout_marginBottom="84dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:layout_marginTop="176dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Usuario: Alejandro Aguirre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:clickable="true"
            android:src="@drawable/ic_account"
            app:backgroundTint="#FFA000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="225dp"
            android:layout_height="42dp"
            android:layout_marginBottom="332dp"
            android:text="@string/perfil_citas"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>